--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: wcy123 
+email: wcy123@gmail.com
+description: "my blog"
 baseurl: ""
-url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  wcy123
 
 # Build settings
 markdown: kramdown
