--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  local-dir: .
+  local-dir: book
   keep-history: false
   target_branch: master
   on:
